[package]
name = "async-response-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = "0.6.1"
futures = { version = "0.3.25", default-features = false }
futures-timer = "3.0.2"

[dev-dependencies]
futures = "0.3.25"
futures-util = { version = "0.3.25", features = ["io"] }
tokio = { version = "1.24.1", features = ["full"] }
